--- a/course.html
+++ b/course.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="bg">
-      <h1 class="judul">Selamat Datang Di WEB Naulan</h1>
+      <h1 class="judul">Selamat Datang Di WEB Naulan Darmawan</h1>
     </div>
 
     <ul class="nav">
